# espressivo.lv2

./: .gitlab-ci.yml  CMakeLists.txt  README.md  chord.c  chord_flt.c  discreto.c  discreto_flt.c  espressivo.c  espressivo.h  espressivo.ttl  manifest.ttl.in  meson.build  midi_in.c  midi_out.c  modulator_flt.c  monitor_out.c  mpe.h  mpe_in.c  mpe_out.c  redirector_flt.c  reducto.c  reducto_flt.c  sample_and_hold.c  sampleandhold_flt.c  sc_out.c  sqew_flt.c  through.c  through_flt.c  tuio2_in.c  tuio2_out.c
canvas.lv2/: render.h
